--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -25,7 +25,11 @@
                 <td th:text="${user.email}"></td>
                 <td th:text="${user.role}"></td>
                 <td>
-                    <a th:href="@{'/users/delete/' + ${user.id}}">Delete</a>
+                    <a th:href="@{'/users/edit/' + ${user.id}}">Edit</a> || 
+                    <a th:href="@{/users/delete/{id}(id=${user.id})}"
+                       onclick="return confirm('Are you sure you want to delete this user?');">
+                       Delete
+                    </a>
                 </td>
             </tr>
         </tbody>
